Remove some unnecessary table columns.

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@ td {
     </span>
 </div>
     <table class="table table-condensed table-striped" id="unhandled">
-    <thead><tr><th>Time</th><th>Hostname</th><th>Tag</th><th>Message</th></tr></thead>
+    <thead><tr><th>Message</th></tr></thead>
     <tbody></tbody>
     </table>
 </div>
